add changes to codebase

--- a/index.html
+++ b/index.html
@@ -4,12 +4,15 @@
         <title>jquery</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link href="css/style.css" rel="stylesheet">
+        <link href="./styles/style.css" rel="stylesheet">
     </head>
     <body>
-        <script src="src/jquery.js"></script>
-        <script>
+        <div class="container">
+            <!--your implementation-->
+            <h1>Getting started with Jquery</h1>
 
-        </script>
+        </div>
+        <script src="./src/jquery.js"></script>
+        <script src="./src/app.js"></script>
     </body>
 </html>
