--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         <div class="container">
             <!--your implementation-->
             <h1>Getting started with Jquery</h1>
+            <h1>Getting started with Jquery</h1>
 
         </div>
         <script src="./src/jquery.js"></script>
